--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/algebra-fun/algebra.github.io.git" # you code repository
 
 # Sidebar settings
-sidebar: true                        # whether or not using Sidebar.
+sidebar: false                        # whether or not using Sidebar.
 sidebar-about-description: "Under Construction"
 sidebar-avatar: /img/avatar-0.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
