--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: BY Blog
-SEOTitle: 我的博客 | BY Blog
+title: MY Blog
+SEOTitle: Algebra-FUN's Blog
 header-img: img/post-bg-desk.jpg
 email: g.creator.fan@gmail.com
 description: "Wait for config."
