--- a/_config.yml
+++ b/_config.yml
@@ -69,10 +69,7 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
+        title: "Mr Daemon",
+        href: "https://mr-daemon.github.io/"
     }
 ]
