--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ header-img: img/post-bg-desk.jpg
 email: g.creator.fan@gmail.com
 description: "Wait for config."
 keyword: "Wait for config"
-url: "http://algebra-fun.github.io"          # your host, for absolute URL
-baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
+url: "http://algebra-fun.gitee.io"          # your host, for absolute URL
+baseurl: "/blog"      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/algebra-fun/algebra.github.io.git" # you code repository
 
 # Sidebar settings
